--- a/Ideia/index.html
+++ b/Ideia/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Manito</title>
-	<link rel="stylesheet" type="text/css" href="styles.css">
+<meta charset="utf-8">
+<title>Manito</title>
+<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
 
 	<div class="container">
-		
+
 		<div class="item-01">
 			<h1>Título do site</h1>
 		</div>
@@ -23,10 +23,14 @@
 		</div>
 
 		<div class="item-03">
-			<p>Que passa vamos el teste de la situaciones en la web para nossos aprenderes como feedar.</p>
-			<p>El dota 2 es uno juego muy bueno e sus qualidá eres el entretenimiento de las personas en el mundo pero q los peruanos hdp.</p>
-			<p>Que passa vamos el teste de la situaciones en la web para nossos aprenderes como feedar.</p>
-			<p>El dota 2 es uno juego muy bueno e sus qualidá eres el entretenimiento de las personas en el mundo pero q los peruanos hdp.</p>
+			<p>Que passa vamos el teste de la situaciones en la web para
+				nossos aprenderes como feedar.</p>
+			<p>El dota 2 es uno juego muy bueno e sus qualidá eres el
+				entretenimiento de las personas en el mundo pero q los peruanos hdp.</p>
+			<p>Que passa vamos el teste de la situaciones en la web para
+				nossos aprenderes como feedar.</p>
+			<p>El dota 2 es uno juego muy bueno e sus qualidá eres el
+				entretenimiento de las personas en el mundo pero q los peruanos hdp.</p>
 		</div>
 
 		<div class="item-04">
@@ -36,67 +40,79 @@
 	</div>
 
 	<div class="bg">
-		
+
 		<div class="container">
-		
-		<div class="item-01">
-			<h1>Título do site</h1>
+
+			<div class="item-01">
+				<h1>Título do site</h1>
+			</div>
+
+			<div class="item-02">
+				<ul>
+					<li><a href="">Link01</a></li>
+					<li><a href="">Link02</a></li>
+					<li><a href="">Link03</a></li>
+					<li><a href="">Link04</a></li>
+				</ul>
+			</div>
+
+			<div class="item-03">
+				<p>Que passa vamos el teste de la situaciones en la web para
+					nossos aprenderes como feedar.</p>
+				<p>El dota 2 es uno juego muy bueno e sus qualidá eres el
+					entretenimiento de las personas en el mundo pero q los peruanos
+					hdp.</p>
+				<p>Que passa vamos el teste de la situaciones en la web para
+					nossos aprenderes como feedar.</p>
+				<p>El dota 2 es uno juego muy bueno e sus qualidá eres el
+					entretenimiento de las personas en el mundo pero q los peruanos
+					hdp.</p>
+			</div>
+
+			<div class="item-04">
+				<h3>Texto do rodapé do site</h3>
+			</div>
+
 		</div>
 
-		<div class="item-02">
-			<ul>
-				<li><a href="">Link01</a></li>
-				<li><a href="">Link02</a></li>
-				<li><a href="">Link03</a></li>
-				<li><a href="">Link04</a></li>
-			</ul>
-		</div>
-
-		<div class="item-03">
-			<p>Que passa vamos el teste de la situaciones en la web para nossos aprenderes como feedar.</p>
-			<p>El dota 2 es uno juego muy bueno e sus qualidá eres el entretenimiento de las personas en el mundo pero q los peruanos hdp.</p>
-			<p>Que passa vamos el teste de la situaciones en la web para nossos aprenderes como feedar.</p>
-			<p>El dota 2 es uno juego muy bueno e sus qualidá eres el entretenimiento de las personas en el mundo pero q los peruanos hdp.</p>
-		</div>
-
-		<div class="item-04">
-			<h3>Texto do rodapé do site</h3>
-		</div>
-
-	</div>
-		
 
 	</div>
 	</div>
 
 	<div class="bg2">
 		<div class="container">
-		
-		<div class="item-01">
-			<h1>Título do site</h1>
-		</div>
 
-		<div class="item-02">
-			<ul>
-				<li><a href="">Link01</a></li>
-				<li><a href="">Link02</a></li>
-				<li><a href="">Link03</a></li>
-				<li><a href="">Link04</a></li>
-			</ul>
-		</div>
+			<div class="item-01">
+				<h1>Título do site</h1>
+			</div>
 
-		<div class="item-03">
-			<p>Que passa vamos el teste de la situaciones en la web para nossos aprenderes como feedar.</p>
-			<p>El dota 2 es uno juego muy bueno e sus qualidá eres el entretenimiento de las personas en el mundo pero q los peruanos hdp.</p>
-			<p>Que passa vamos el teste de la situaciones en la web para nossos aprenderes como feedar.</p>
-			<p>El dota 2 es uno juego muy bueno e sus qualidá eres el entretenimiento de las personas en el mundo pero q los peruanos hdp.</p>
-		</div>
+			<div class="item-02">
+				<ul>
+					<li><a href="">Link01</a></li>
+					<li><a href="">Link02</a></li>
+					<li><a href="">Link03</a></li>
+					<li><a href="">Link04</a></li>
+				</ul>
+			</div>
 
-		<div class="item-04">
-			<h3>Texto do rodapé do site</h3>
-		</div>
+			<div class="item-03">
+				<p>Que passa vamos el teste de la situaciones en la web para
+					nossos aprenderes como feedar.</p>
+				<p>El dota 2 es uno juego muy bueno e sus qualidá eres el
+					entretenimiento de las personas en el mundo pero q los peruanos
+					hdp.</p>
+				<p>Que passa vamos el teste de la situaciones en la web para
+					nossos aprenderes como feedar.</p>
+				<p>El dota 2 es uno juego muy bueno e sus qualidá eres el
+					entretenimiento de las personas en el mundo pero q los peruanos
+					hdp.</p>
+			</div>
 
-	</div>
+			<div class="item-04">
+				<h3>Texto do rodapé do site</h3>
+			</div>
+
+		</div>
 	</div>
 
 </body>
