--- a/mbe/inicio.html
+++ b/mbe/inicio.html
@@ -1,7 +1,11 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
 	<head>
+	<meta charset="utf-8">
+	<title>MyBazz Easy</title>
+	
 	</head>
 	<body>
+	
 	</body>
 </html>
