--- a/Modelo de site/index.html
+++ b/Modelo de site/index.html
@@ -3,9 +3,11 @@
 <head>
 <title>MyBazz</title>
 <meta charset="UTF-8">
+<meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="css/styles.css">
 <link rel="stylesheet" type="text/css" href="css/login.css">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
 
 </head>
 <body>
@@ -24,7 +26,7 @@
       <input type="text" placeholder="Digite o nome do Usuário" name="uname" required>
 
       <label for="psw"><b>Senha</b></label>
-      <input type="password" placeholder="Digite a Senha do Usuário" name="psw" required></br></br>
+      <input type="password" placeholder="Digite a Senha do Usuário" name="psw" required></br>
         
       <button type="submit">Logar</button></br></br>
       <label>
@@ -44,17 +46,20 @@
 <div id="navbar">
 
   <a href="#" id="logo">MyBazz Easy</a>
+
   <div id="navbar-right">
     <a class="active" href="#">HOME</a>
-    <a href="#contact">Contatos</a>
     <a href="#">Produtos</a>
     <a href="#">Vendas</a>
+    <a href="#">Contatos</a>
      <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">LOGIN</button>
   </div>
 </div>
 
-<div class="header" id="cabecalho">
-  <img src="img/testelogo.png">
+<div class="header" id="cabecalho" class="btns">
+  <img src="img/loja1.png" alt="logobg" class="neon" id="center">
+  <button type="button" class="efeito">MYBAZZ</button>
+
   
 </div>
 
@@ -124,8 +129,6 @@ function scrollFunction() {
   }
 }
 </script>
-
-
 
 </body>
 </html>
