--- a/index.html
+++ b/index.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
- <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
  <link href='css/estilo.css' rel='stylesheet' type='text/css'>
 <meta charset="utf-8">
 <title>MyBazz Easy</title>
 </head>
 <body>
-	<div class="supbarsombra" style="overflow: auto;">
-		<div id="divsuperior" style="width:100%;overflow:hidden;height:44px">
-		<a href="" class="btnSuperior btnSupEspaco">MyBazz Easy</a>
+	<!--Bloco menu-->
+	<div id="divsup1" class="supbarsombra" style="overflow: auto;">
+		<div id="divsup2" style="width:100%;overflow:hidden;height:44px">
+		<a href="index.html" class="btnSuperior btnSupEspaco testecor">MyBazz Easy</a>
+		<a href="user/login.html" class="btnSuperior btnSupEspaco btnDireita testecor">Entrar</a>
+		<a href="user/criarconta.html" class="btnSuperior btnSupEspaco btnDireita">Criar Conta</a>
+		<a href="#footer" class="btnSuperior btnSupEspaco btnDireita testecor">Contato</a>
+		<a href="lojas.html" class="btnSuperior btnSupEspaco btnDireita">Lojas</a>
+		<a href="produtos.html" class="btnSuperior btnSupEspaco btnDireita testecor">Produtos</a>
+		<a href="#divsup1" class="btnSuperior btnSupEspaco btnDireita">Inicio</a>	
 		</div>
 	</div> 
 	<div id="divimageteste" class="sombrabox centro">
-	<img alt="Conselho do Dia" src="img/hora-de-aventura.jpg" style="width: 100%">
+	<img alt="Conselho do Dia" src="img/troll.gif" style="width: 100%">
+	
 	<div class="container"><p>Se Mata</p></div>
 	</div>
 	
 </body>
+<footer id="footer">
+	<h2>Teste</h2>
+</footer>
 </html>
