--- a/principal/index.html
+++ b/principal/index.html
@@ -40,6 +40,7 @@
     </div>
   </form>
 </div>
+<!-- Fim login -->
 <div id="id02" class="modal">
   
   <form class="modal-content animate" action="/action_page.php">
@@ -68,7 +69,7 @@
     </div>
   </form>
 </div>
-<!--- Final codigo login --->
+<!--- Final codigo criar conta --->
 
 <!--- Navegação --->
 <div id="navbar">
