--- a/principal/index.html
+++ b/principal/index.html
@@ -16,6 +16,7 @@
   <div id="id01" class="modal">
   
   <form class="modal-content animate" action="/action_page.php">
+    <div class="fundo-user">
     <div class="imgcontainer">
       <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
       <img src="img/avatar.png" alt="Avatar" class="avatar">
@@ -34,16 +35,19 @@
       </label>
     </div>
 
-    <div class="container" style="background-color:#f1f1f1">
+    <div class="container">
       <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancelar</button>
-      <span class="psw">Esqueceu sua <a href="#">senha?</a></span>
+      <span class="psw">Esqueceu sua <a style="color: #2ec2c1;" href="#">senha?</a></span>
     </div>
+  	</div>
   </form>
 </div>
 <!-- Fim login -->
 <div id="id02" class="modal">
   
   <form class="modal-content animate" action="/action_page.php">
+   <div class="fundo-user">
+  
     <div class="imgcontainer">
       <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
       <img src="img/avatar.png" alt="Avatar" class="avatar">
@@ -58,15 +62,13 @@
       <input type="password" placeholder="Digite a Senha do Usuário" name="psw" required></br>
         
       <button type="submit">Criar</button></br></br>
-      <label>
-        <input type="checkbox" checked="checked" name="remember"> Lembrar de mim.
-      </label>
     </div>
 
-    <div class="container" style="background-color:#f1f1f1">
+    <div class="container">
       <button type="button" onclick="document.getElementById('id02').style.display='none'" class="cancelbtn">Cancelar</button>
-      <span class="psw">Esqueceu sua <a href="#">senha?</a></span>
+      
     </div>
+	</div>  
   </form>
 </div>
 <!--- Final codigo criar conta --->
