Modificação de Nomes de botões

--- a/principal/index.html
+++ b/principal/index.html
@@ -79,9 +79,8 @@
   <a href="#" id="logo">MyBazz Easy</a>
 
   <div id="navbar-right">
-    <a class="active" href="#">HOME</a>
-    <a href="#">Produtos</a>
-    <a href="#">Vendas</a>
+    <a class="active" href="#">Inicio</a>
+    <a href="#">Passear no Shopping</a>
     <a href="#">Contatos</a>
     <button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Entrar</button>
     <button onclick="document.getElementById('id02').style.display='block'" style="width:auto;">Criar Conta</button>
