--- a/principal/index.html
+++ b/principal/index.html
@@ -5,8 +5,8 @@
 <meta charset="UTF-8">
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="css/styles.css">
-<link rel="stylesheet" type="text/css" href="css/login.css">
+<link rel="stylesheet" type="text/css" href="../css/styles.css">
+<link rel="stylesheet" type="text/css" href="../css/login.css">
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css">
 
 </head>
@@ -88,7 +88,7 @@
 </div>
 
 <div class="header" id="cabecalho" class="btns">
-  <img src="img/loja1.png" alt="logobg" class="neon" id="center">
+  <img src="../img/loja1.png" alt="logobg" class="neon" id="center">
   <button type="button" class="efeito">MYBAZZ</button>
 
   
