--- a/user/user.html
+++ b/user/user.html
@@ -18,7 +18,7 @@
     	<a href="#">Passear no Shopping</a>
     	<a href="#">Contatos</a>
     	<button onclick="" style="width:auto;">Perfil</button>
-    	<button onclick="" style="width:auto;">Criar Conta</button>
+    	<button onclick="" style="width:auto;">Publicar</button>
  		</div>
 	</div>
 </body>
