--- a/Shopp/index.html
+++ b/Shopp/index.html
@@ -77,7 +77,7 @@
 
 <div class="video-background">
 	<div class="title-video">
-		<img id="bazz" src="img/mybazz.png">
+		<img id="bazz" src="../img/logombe.png">
 	</div>
 	<!-- O video -->
 <video autoplay muted loop id="bg_video">
