--- a/Shopp/index.html
+++ b/Shopp/index.html
@@ -53,8 +53,6 @@
 	
 	<header>
 		<div id="logo"><a href="#"><img src="img/lojq.png" alt="Homepag"></div></a>
-		
-
 		<div id="cd-hamburger-menu"><a class="cd-img-replace" href="#0">Menu</a></div>
 
 		
@@ -62,13 +60,13 @@
 
 	<nav id="main-nav">
 		<ul>
-			<li><a href="index.html" class="cool-link"><i class="fab fa-fort-awesome"></i> Home</a></li>
-			<li><a href="#" class="cool-link"><i class="fas fa-shopping-cart"></i> Produtos</a></li>
+			<li><a href="index.html" class="cool-link"><i class="fab fa-fort-awesome"></i>Home</a></li>
+			<li><a href="#" class="cool-link"><i class="fas fa-shopping-cart"></i>Passear</a></li>
 			<li><a href="Lojas.html" class="cool-link"><i class="fas fa-store"></i> Lojas</a></li>
 			<li><a href="#" class="cool-link"><i class="fas fa-handshake"></i> Contato</a></li>
 			
-			<button  onclick="document.getElementById('id01').style.display='block'" style="margin: 0 15px;">Entrar</button>
-			<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Cadastrar</button>
+			<button class="btnlogcont" onclick="document.getElementById('id01').style.display='block'" style="margin: 0 15px;">Entrar</button>
+			<button class="btnlogcont" onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Cadastrar</button>
 		</ul>
 		
 	</nav>
@@ -76,8 +74,8 @@
 
 
 <div class="video-background">
-	<div class="title-video">
-		<img id="bazz" src="../img/logombe.png">
+	<div class="title-video imgvideoajust">
+		<img id="bazz" src="../img/logombe.png" style="width: 100%;height:100%;">
 	</div>
 	<!-- O video -->
 <video autoplay muted loop id="bg_video">
