Problemas com Div e Video Corrigido

--- a/Shopp/index.html
+++ b/Shopp/index.html
@@ -19,7 +19,8 @@
 </head>
 <body class="foo">
 	<!--- efeito da tela de login --->
-  <div id="id01" class="modal">
+ <div id="id01" class="modal">
+
   
   <form class="modal-content animate" action="/action_page.php">
     <div class="fundo-user">
@@ -72,26 +73,22 @@
 	</nav>
 
 
-
+<img id="bazz" src="../img/logombe.png" style="width: auto;height:auto;">
 <div class="video-background">
 	<div class="title-video imgvideoajust">
-		<img id="bazz" src="../img/logombe.png" style="width: 100%;height:100%;">
+		<video autoplay muted loop id="bg_video">
+  		<source src="midia/Escalate.mp4" type="video/mp4">
+		</video>
 	</div>
 	<!-- O video -->
-<video autoplay muted loop id="bg_video">
-  <source src="midia/Escalate.mp4" type="video/mp4">
-</video>
+
 
 </div>
+<h2>TESTE</h2>
 	
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <script src="js/main.js"></script> <!-- Gem jQuery -->
-
-
 <script src="js/modernizr.js"></script> <!-- Modernizr -->
-
-
-
 
 </body>
 </html>
