Layout de Login criado!

--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@
 				<li><a href="#" class="cool-link"><i class="fas fa-shopping-cart"></i>Passear</a></li>
 				<li><a href="lojas.html" class="cool-link"><i class="fas fa-store"></i> Lojas</a></li>
 				<li><a href="#" class="cool-link"><i class="fas fa-handshake"></i> Contato</a></li>
-
-				<button  onclick="document.getElementById('id01').style.display='block'" style="margin: 0 25px;">Logar</button>
 				<!--
+				<button  onclick="document.getElementById('id01').style.display='block'" style="margin: 0 25px;">Logar</button>
+
 				<button onclick="document.getElementById('id01').style.display='block'" style="width:auto;">Cadastro</button>
 				-->
+				<a href="user/login.html">Login Teste</a>
 				<a href="user/cadastro.html">Cadastro Teste</a>
 			</ul>
 
