--- a/user/cadastro.html
+++ b/user/cadastro.html
@@ -8,7 +8,7 @@
     <title>MayBazz Easy</title>
 
 </head>
-<body id="bdcad">
+<body id="bdlog">
     
     <header id="hdrcad"> <h2><a href="../index.html">Voltar Teste</a></h2>
     </header>
@@ -34,7 +34,7 @@
                                 <input id="datanascimento" type="date" placeholder="Data">
                             </div>
                             <div class="divesquerda">
-                                <label style="height: 50%; width: 100%">Sexo</label>
+                                <label for="sexo" style="height: 50%; width: 100%">Sexo</label>
                                 <select id="sexo" class="custom-select">
                                         <option value="F">Feminino</option>
                                         <option value="M">Masculino</option>
