--- a/index.html
+++ b/index.html
@@ -116,7 +116,6 @@
 </footer>
 
 
-
 </div>
 
 
@@ -126,7 +125,7 @@
 
 <script src="js/modernizr.js"></script> <!-- Modernizr -->
 
-
+ <script  src="js/index.js"></script>
 
 
 </body>
