--- a/Login-cadastro-ideia/index.html
+++ b/Login-cadastro-ideia/index.html
@@ -20,8 +20,8 @@
 	<div v-if="signUp">
 		<div class="aim">
 			<h2>E aí Pessoa ;)</h2>
-			<h6>Digite seus dados pessoais e comece a viagem comigo</h6>
-			<button @click="signUp = !signUp" class="btn ">Logar</button>
+			<h6>Digite seus dados pessoais e comece a passear com a gente</h6>
+			<button @click="signUp = !signUp" class="btn ">Cadastrar</button>
 		</div>
 		<div class="formArea">
 			<h2>Logar</h2>
@@ -33,7 +33,7 @@
 				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
 			</div>
 
-			<button class="btn">Cadastrar</button>
+			<button class="btn">Logar</button>
 			
 		</div>
 	</div>
@@ -42,7 +42,7 @@
 		<div class="aim in">
 			<h2>Bem vindo de volta!</h2>
 			<h6>Para manter contato comigo, faça o login com suas informações pessoais</h6>
-			<button @click="signUp = !signUp" class="btn">Cadastrar</button>
+			<button @click="signUp = !signUp" class="btn">Login</button>
 		</div>
 		<div class="formArea in">
 			<h2>Cadastro</h2>
@@ -57,7 +57,7 @@
 				<input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
 			</div>
 
-			<button class="btn">Logar</button>
+			<button class="btn">Cadastrar</button>
 		</div>
 		
 	</div>
