--- a/login/sign.html
+++ b/login/sign.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="pt-br" >
 
 <head>
   <meta charset="UTF-8">
-  <title>Sign IN|UP</title>
+  <link rel="shortcut icon" type="image/x-png" href="../img/loja.png">
+  <title>MyBazz Easy</title>
   
   
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css'>
@@ -24,7 +25,7 @@
 			<button @click="signUp = !signUp" class="btn ">Cadastrar</button>
 		</div>
 		<div class="formArea">
-			<h2>Logar</h2>
+			<h2>Logue</h2>
 			
 			<div class="form-group">
 				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
@@ -42,7 +43,7 @@
 		<div class="aim in">
 			<h2>Bem vindo de volta!</h2>
 			<h6>Para manter contato comigo, faça o login com suas informações pessoais</h6>
-			<button @click="signUp = !signUp" class="btn">Login</button>
+			<button @click="signUp = !signUp" class="btn">Logar</button>
 		</div>
 		<div class="formArea in">
 			<h2>Cadastro</h2>
