--- a/passeio.html
+++ b/passeio.html
@@ -15,7 +15,15 @@
 
 	<title>MyBazz Easy</title>
 
-	
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+	<script src="js/main.js"></script> <!-- Gem jQuery -->
+
+
+	<script src="js/modernizr.js"></script> <!-- Modernizr -->
+
+	<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
+
+	<script  src="js/slide.js"></script>
 </head>
 <body class="foo">
 
@@ -33,72 +41,64 @@
 				<li><a href="Lojas.html" class="cool-link"><i class="fas fa-store"></i> Lojas</a></li>
 				<li><a href="#" class="cool-link"><i class="fas fa-shoe-prints"></i> Passeio</a></li>
 				<li><a href="#" class="cool-link"><i class="fas fa-handshake"></i> Contato</a></li>
-			
+
 			</ul>
 
 		</nav>
 
 		<!--- Carrosel SBT --->
-	<div class="background">
-		<div id="slider" class="container-slider">
-			<ul class="slider-wrapper">
-				<li class="current-slide">
-					<img src="img/1.jpg" title="" alt="">
+		<div class="background">
+			<div id="slider" class="container-slider">
+				<ul class="slider-wrapper">
+					<li class="current-slide">
+						<img src="img/1.jpg" title="" alt="">
 
-					<div class="caption">
-						<h2 class="slider-title">Slide one</h2>
-						<p>Temos aqui uma imagem que representa algo na vida.</p>
-					</div>
-				</li>
+						<div class="caption">
+							<h2 class="slider-title">Slide one</h2>
+							<p>Temos aqui uma imagem que representa algo na vida.</p>
+						</div>
+					</li>
 
-				<li>
-					<img src="img/2.jpg" title="" alt="">
+					<li>
+						<img src="img/2.jpg" title="" alt="">
 
-					<div class="caption">
-						<h2 class="slider-title">Slide 2</h2>
-						<p>Outro Slide que representa algo!</p>
-					</div>
-				</li>
+						<div class="caption">
+							<h2 class="slider-title">Slide 2</h2>
+							<p>Outro Slide que representa algo!</p>
+						</div>
+					</li>
 
-				<li>
-					<img src="img/.jpg" title="" alt="">
+					<li>
+						<img src="img/.jpg" title="" alt="">
 
-					<div class="caption">
-						<h2 class="slider-title">Slide 3</h2>
-						<p>A incrivel nazare confusa!</p>
-					</div>
-				</li>
+						<div class="caption">
+							<h2 class="slider-title">Slide 3</h2>
+							<p>A incrivel nazare confusa!</p>
+						</div>
+					</li>
 
-				<li>
-					<img src="img/4.jpg" title="" alt="">
+					<li>
+						<img src="img/4.jpg" title="" alt="">
 
-					<div class="caption">
-						<h2 class="slider-title">Slide 4</h2>
-						<p>Carrosel</p>
-					</div>
-				</li>
-			</ul>
-			<!-- Sombras -->
-			<div class="slider-shadow"></div>
+						<div class="caption">
+							<h2 class="slider-title">Slide 4</h2>
+							<p>Carrosel</p>
+						</div>
+					</li>
+				</ul>
+				<!-- Sombras -->
+				<div class="slider-shadow"></div>
 
-			<!-- Controles de Navegacion -->
-			<ul id="control-buttons" class="control-buttons"></ul>
+				<!-- Controles de Navegacion -->
+				<ul id="control-buttons" class="control-buttons"></ul>
+			</div>
 		</div>
 	</div>
+	 <button class="button"> PASSEIO</button>
 </div>
-	<h1 id="Tour">Passeio</h1>
-</div>
 
 
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script src="js/main.js"></script> <!-- Gem jQuery -->
 
-
-<script src="js/modernizr.js"></script> <!-- Modernizr -->
-
-<script src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js'></script>
-
-<script  src="js/slide.js"></script>
 
 </body>
 </html>
