--- a/login/logcad.html
+++ b/login/logcad.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
-<html lang="pt-br" >
+<html lang="pt-BR" >
 
 <head>
   <meta charset="UTF-8">
-  <link rel="shortcut icon" type="image/x-png" href="../img/loja.png">
   <title>MyBazz Easy</title>
-  
-  
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css'>
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=PT+Serif|Poppins'>
-
-      <link rel="stylesheet" href="css/style.css">
-
-  
+		<link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.2/css/bootstrap.min.css'>
+		<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=PT+Serif|Poppins'>
+		<link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
@@ -25,7 +19,7 @@
 			<button @click="signUp = !signUp" class="btn ">Cadastrar</button>
 		</div>
 		<div class="formArea">
-			<h2>Logue</h2>
+			<h2>Logar</h2>
 			
 			<div class="form-group">
 				<input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Seu email">
@@ -43,7 +37,7 @@
 		<div class="aim in">
 			<h2>Bem vindo de volta!</h2>
 			<h6>Para manter contato comigo, faça o login com suas informações pessoais</h6>
-			<button @click="signUp = !signUp" class="btn">Logar</button>
+			<button @click="signUp = !signUp" class="btn">Login</button>
 		</div>
 		<div class="formArea in">
 			<h2>Cadastro</h2>
