--- a/user/cadastro.html
+++ b/user/cadastro.html
@@ -8,7 +8,7 @@
     <title>MayBazz Easy</title>
 
 </head>
-<body id="bdlog">
+<body id="bdcad">
     
     <header id="hdrcad"> <h2><a href="../index.html">Voltar Teste</a></h2>
     </header>
