--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
 				<li><a href="Lojas.html" class="cool-link"><i class="fas fa-store"></i> Lojas</a></li>
 				<li><a href="passeio.html" class="cool-link"><i class="fas fa-shoe-prints"></i> Passeio</a></li>
 				<li><a href="#" class="cool-link"><i class="fas fa-handshake"></i> Contato</a></li>
-				<li><a href="login/sign.html" class="cool-link"><i class="fas fa-sign-in-alt"></i> Logar|Cadastrar</a></li>
+				<li><a href="login/sign.html" class="cool-link"><i class="fas fa-sign-in-alt"></i> Logar|Cadastrar</a>
+				</li>
+				<li><a href="user/login.html" class="cool-link"><i class="fas fa-user"></i> Logar</a></li>
+				<li><a href="user/cadastro.html" class="cool-link"><i class="fas fa-user-plus"></i> Cadastro</a></li>
+			</ul>
+			<ul>
 
 			</ul>
 
