--- a/user/login.html
+++ b/user/login.html
@@ -8,7 +8,7 @@
     <title>MayBazz Easy</title>
 
 </head>
-<body id="bdcad">
+<body id="bdlog">
 
 <header id="hdrcad"> <h2><a href="../index.html">Voltar Teste</a></h2>
 </header>
