--- a/index.html
+++ b/index.html
@@ -35,13 +35,11 @@
 		<nav id="main-nav">
 			<ul>
 				<li><a href="index.html" class="cool-link"><i class="fab fa-fort-awesome"></i> Home</a></li>
-				<li><a href="Lojas.html" class="cool-link"><i class="fas fa-store"></i> Lojas</a></li>
+				<li><a href="lojas.html" class="cool-link"><i class="fas fa-store"></i> Lojas</a></li>
 				<li><a href="passeio.html" class="cool-link"><i class="fas fa-shoe-prints"></i> Passeio</a></li>
 				<li><a href="#" class="cool-link"><i class="fas fa-handshake"></i> Contato</a></li>
-				<li><a href="login/sign.html" class="cool-link"><i class="fas fa-sign-in-alt"></i> Logar|Cadastrar</a>
+				<li style="float: right;"><a href="login/logcad.html" class="cool-link"><i class="fas fa-sign-in-alt"></i> Logar|Cadastrar</a>
 				</li>
-				<li><a href="user/login.html" class="cool-link"><i class="fas fa-user"></i> Logar</a></li>
-				<li><a href="user/cadastro.html" class="cool-link"><i class="fas fa-user-plus"></i> Cadastro</a></li>
 			</ul>
 			<ul>
 
