--- a/login/logcad.html
+++ b/login/logcad.html
@@ -10,7 +10,12 @@
 </head>
 
 <body>
-<header></header>
+<header>
+    <div id="btn-back">
+        <img id="img-btn-back" onclick="voltar('../index.html')" src="../img/seta-esquerda.png">
+        <a href="../index.html"></a>
+    </div>
+</header>
 <div id="app" class="base">
 	<div v-if="signUp">
 		<div class="aim">
@@ -85,6 +90,11 @@
 </div>
 <script src='https://cdn.jsdelivr.net/npm/vue'></script>
 <script  src="js/index.js"></script>
+<script type="text/javascript">
+        document.querySelector('#btn-back').addEventListener('click',function (){
+        window.location.assign("../index.html");
+    })
+</script>
 </body>
 
 </html>
