--- a/login/logcad.html
+++ b/login/logcad.html
@@ -12,8 +12,7 @@
 <body>
 <header>
     <div id="btn-back">
-        <img id="img-btn-back" onclick="voltar('../index.html')" src="../img/seta-esquerda.png">
-        <a href="../index.html"></a>
+        <img id="img-btn-back" src="../img/seta-esquerda.png">
     </div>
 </header>
 <div id="app" class="base">
