Terminando Tela de Perfil

--- a/login/logcad.html
+++ b/login/logcad.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-<header>
+<header id="hdrlogcad">
     <div id="btn-back">
         <img id="img-btn-back" src="../img/seta-esquerda.png">
     </div>
