--- a/login/logcad.html
+++ b/login/logcad.html
@@ -23,7 +23,7 @@
 			<button @click="signUp = !signUp" class="btn ">Cadstrar</button>
 		</div>
 		<div class="formArea">
-			<h2>Bem-Vindo ao MyBazz EasyI</h2>
+			<h2>Bem-Vindo ao MyBazz Easy!</h2>
 			<div>
 				<div class="form-group">
 					<input type="email" class="form-control" id="email-log" aria-describedby="emailHelp" placeholder="Seu email">
@@ -62,7 +62,7 @@
 						<option value="0" label="Sexo"></option>
 						<option value="F">Feminino</option>
 						<option value="M">Masculino</option>
-						<option value="O">Outro</option>
+						<option value="O">Outros</option>
 					</select>
 				</div>
 			</div>
