--- a/passeio.html
+++ b/passeio.html
@@ -38,10 +38,10 @@
 		<nav id="main-nav">
 			<ul>
 				<li><a href="index.html" class="cool-link"><i class="fab fa-fort-awesome"></i> Home</a></li>
-				<li><a href="Lojas.html" class="cool-link"><i class="fas fa-store"></i> Lojas</a></li>
+				<li><a href="lojas.html" class="cool-link"><i class="fas fa-store"></i> Lojas</a></li>
 				<li><a href="#" class="cool-link"><i class="fas fa-shoe-prints"></i> Passeio</a></li>
 				<li><a href="#" class="cool-link"><i class="fas fa-handshake"></i> Contato</a></li>
-
+				<li><a href="login/logcad.html" class="cool-link">Cadastro|Entrar</a></li>
 			</ul>
 
 		</nav>
